@@ -1,3 +1,8 @@
+2008-08-09  Markus Steinborn <msteinbo@uni-paderborn.de>
+
+	* src/resource.c(resource_checkResources): Corrected misspellings in
+	message displayed to the user.
+
 2008-08-02  Markus Steinborn <msteinbo@uni-paderborn.de>
 
 	* src/action.c (action_print_pos): Code cleanup
